# service-monitor

./: .pre-commit-config.yaml  .toolrc  CLAUDE.md  Makefile  README.md  monitored_services.json  pyproject.toml  service-monitor.service
docs/: api.md
src/service_monitor/: __init__.py  config.py  main.py  models.py  monitored_services.py  notifications.py  server.py  storage.py
src/service_monitor/static/css/: style.css  widgets.css
src/service_monitor/templates/: dashboard.html  service_detail.html
src/service_monitor/templates/widgets/: critical.html  service.html  summary.html
tests/: test_core.py  test_main.py  test_models.py  test_notifications.py  test_pytest.py  test_storage.py
